code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_20.wast
(assert_invalid
  (module (func $large-label (br 0x10000001)))
  "unknown label"
)